# foxglove-sdk

./: .clang-format  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Container.mk  Dockerfile  Makefile  README.md  eslint.config.mjs  package.json
.github/workflows/: c_cpp.yml  ci.yml  docs.yml  draft-release.yml  python.yml
c/: Cargo.toml  build.rs  cbindgen.toml
c/include/foxglove-c/: foxglove-c.h
c/src/: bytes.rs  connection_graph.rs  fetch_asset.rs  generated_types.rs  lib.rs  logging.rs  parameter.rs  service.rs  tests.rs  util.rs
c/src/parameter/: tests.rs
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
cpp/examples/auto-serialize/src/: main.cpp
cpp/examples/connection-graph/src/: main.cpp
cpp/examples/foxglove-schemas/src/: main.cpp
cpp/examples/mcap/src/: main.cpp
cpp/examples/param-server/src/: main.cpp
cpp/examples/quickstart/src/: main.cpp
cpp/examples/ws-server/src/: main.cpp
cpp/examples/ws-services/src/: main.cpp
cpp/foxglove/docs/: index.rst
cpp/foxglove/include/foxglove/: arena.hpp  channel.hpp  context.hpp  error.hpp  expected.hpp  foxglove.hpp  mcap.hpp  schemas.hpp  server.hpp  time.hpp
cpp/foxglove/include/foxglove/server/: connection_graph.hpp  parameter.hpp  service.hpp
cpp/foxglove/src/: channel.cpp  context.cpp  foxglove.cpp  mcap.cpp  schemas.cpp  server.cpp
cpp/foxglove/src/server/: connection_graph.cpp  parameter.cpp  service.cpp
cpp/foxglove/tests/: test_arena.cpp  test_channel.cpp  test_mcap.cpp  test_parameter.cpp  test_schemas.cpp  test_server.cpp
python/foxglove-sdk/: CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
python/foxglove-sdk-examples/live-visualization/: main.py  pyproject.toml
python/foxglove-sdk-examples/live_visualization/: main.py
python/foxglove-sdk-examples/logging-context/: main.py  pyproject.toml
python/foxglove-sdk-examples/quickstart/: main.py  pyproject.toml
python/foxglove-sdk-examples/write-mcap-file/: main.py  pyproject.toml
python/foxglove-sdk-examples/ws-asset-server/: main.py  pyproject.toml
python/foxglove-sdk-examples/ws-connection-graph/: main.py  pyproject.toml
python/foxglove-sdk-examples/ws-param-server/: main.py  pyproject.toml
python/foxglove-sdk-examples/ws-services/: main.py  pyproject.toml
python/foxglove-sdk-examples/ws-stream-mcap/: main.py  pyproject.toml
python/foxglove-sdk/python/docs/: examples.rst  version.py
python/foxglove-sdk/python/docs/api/: index.rst
python/foxglove-sdk/python/examples/: live_visualization.py  verbose.py  write_log.py
python/foxglove-sdk/python/foxglove/: __init__.py  channel.py  websocket.py
python/foxglove-sdk/python/foxglove/_foxglove_py/: __init__.pyi  channels.pyi  schemas.pyi  schemas_wkt.pyi  websocket.pyi
python/foxglove-sdk/python/foxglove/tests/: test_channel.py  test_server.py
python/foxglove-sdk/src/: lib.rs  schemas_wkt.rs  websocket.rs  websocket_server.rs
ros/foxglove_msgs/: package.xml
ros/foxglove_msgs/ros2/: CameraCalibration.msg  LocationFix.msg
rust/examples-unstable/client-publish/: Cargo.toml
rust/examples-unstable/client-publish/src/: main.rs
rust/examples-unstable/ws-stream-mcap/: Cargo.toml
rust/examples-unstable/ws-stream-mcap/src/: main.rs
rust/examples/channelless/: Cargo.toml
rust/examples/channelless/src/: main.rs
rust/examples/client-publish/: Cargo.toml
rust/examples/client-publish/src/: main.rs
rust/examples/client_publish/: Cargo.toml
rust/examples/mcap/: Cargo.toml
rust/examples/mcap/src/: main.rs
rust/examples/param-server/: Cargo.toml
rust/examples/param-server/src/: main.rs
rust/examples/param_server/: Cargo.toml
rust/examples/param_server/src/: main.rs
rust/examples/quickstart/: Cargo.toml
rust/examples/quickstart/src/: main.rs
rust/examples/ws-server/: Cargo.toml
rust/examples/ws-server-blocking/: Cargo.toml
rust/examples/ws-server-blocking/src/: main.rs
rust/examples/ws-server-fetch-asset/: Cargo.toml
rust/examples/ws-server-fetch-asset/src/: main.rs
rust/examples/ws-server/src/: main.rs
rust/examples/ws-services/: Cargo.toml
rust/examples/ws-services/src/: client.rs  server.rs
rust/examples/ws-stream-mcap/: Cargo.toml
rust/examples/ws_server/: Cargo.toml
rust/examples/ws_server/src/: main.rs
rust/examples/ws_server_blocking/: Cargo.toml
rust/examples/ws_server_fetch_asset/: Cargo.toml
rust/examples/ws_services/: Cargo.toml
rust/examples/ws_stream_mcap/: Cargo.toml
rust/foxglove/: Cargo.toml  README.md
rust/foxglove-proto-gen/: Cargo.toml
rust/foxglove-proto-gen/src/: lib.rs
rust/foxglove/src/: channel.rs  channel_builder.rs  context.rs  encode.rs  lib.rs  log_context.rs  log_macro.rs  log_sink.rs  log_sink_set.rs  mcap_writer.rs  schema.rs  schemas_wkt.rs  sink.rs  testutil.rs  websocket.rs  websocket_server.rs
rust/foxglove/src/channel/: lazy_channel.rs  raw_channel.rs
rust/foxglove/src/encode/: schemars.rs
rust/foxglove/src/mcap_writer/: mcap_sink.rs
rust/foxglove/src/schemas/: descriptors.rs  impls.rs
rust/foxglove/src/schemas_wkt/: chrono.rs  tests.rs
rust/foxglove/src/tests/: logging.rs
rust/foxglove/src/testutil/: log_sink.rs  sink.rs
rust/foxglove/src/websocket/: client.rs  connected_client.rs  connection_graph.rs  fetch_asset.rs  handshake.rs  server.rs  service.rs  tests.rs  testutil.rs
rust/foxglove_derive/: Cargo.toml
rust/foxglove_proto_gen/: Cargo.toml
rust/foxglove_proto_gen/src/: lib.rs
schemas/: README.md
schemas/flatbuffer/: CameraCalibration.fbs  LocationFix.fbs
schemas/jsonschema/: CameraCalibration.json  Grid.json  index.ts
schemas/omgidl/foxglove/: CameraCalibration.idl
schemas/proto/foxglove/: CameraCalibration.proto
schemas/ros1/: CameraCalibration.msg  LocationFix.msg
scripts/: bumpSdkVersion.ts  generate.ts  runPythonSdkExamples.ts
typescript/schemas/: package.json
typescript/schemas/src/internal/: generatePyclass.test.ts  generatePyclass.ts  generateSdkCpp.ts  generateSdkRustCTypes.ts  schemas.ts
typescript/schemas/src/types/: CameraCalibration.ts  index.ts
(+13 files in other folders)
