[package]
name = "foxglove_c"
version = "0.5.0"
edition = "2021"
publish = false

[lib]
name = "foxglove"
crate-type = ["staticlib", "cdylib"]

[lints]
workspace = true

[dependencies]
bitflags = "2.9.0"
foxglove = { path = "../rust/foxglove", features = ["unstable"] }
mcap.workspace = true

[build-dependencies]
cbindgen = "0.28.0"
