[package]
name = "example-mcap"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
foxglove = { path = "../../foxglove", default-features = false }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.5"
env_logger = "0.11.5"
schemars = "0.8.21"
serde = { version = "1.0", features = ["derive"] }
